<resources>
    <string name="app_name">RSSFeedAggAndroid</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_explore">Explore</string>
    <string name="action_tech">Tech</string>
    <string name="action_gaming">Gaming</string>
    <string name="action_film">Film</string>
    <string name="action_cars">Cars</string>
    <string name="action_motos">Motos</string>
    <string name="action_anime">Anime</string>
    <string name="action_mangas">Mangas</string>
    <string name="action_business">Business</string>
    <string name="action_news">News</string>
    <string name="action_finance">Finance</string>
    <string name="action_education">Education</string>
    <string name="action_culture">Culture</string>
    <string name="action_beauty">Beauty</string>
    <string name="action_settings">Settings</string>
    <string name="action_login">Login</string>
    <string name="action_logout">Logout</string>
    <string name="action_all">All</string>
    <string name="action_today">Today</string>
    <string name="action_readLater">Read Later</string>
    <string name="account">Account</string>
    <string name="personalFeeds">Personal Feeds</string>

</resources>
