<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navr_explore"
            android:title="@string/action_explore" />
        <item
            android:id="@+id/navr_tech"
            android:title="@string/action_tech" />
        <item
            android:id="@+id/navr_gaming"
            android:title="@string/action_gaming" />
        <item
            android:id="@+id/navr_film"
            android:title="@string/action_film" />
        <item
            android:id="@+id/navr_cars"
            android:title="@string/action_cars" />
        <item
            android:id="@+id/navr_motos"
            android:title="@string/action_motos" />
        <item
            android:id="@+id/navr_anime"
            android:title="@string/action_anime" />
        <item
            android:id="@+id/navr_mangas"
            android:title="@string/action_mangas" />
        <item
            android:id="@+id/navr_business"
            android:title="@string/action_business" />
        <item
            android:id="@+id/navr_news"
            android:title="@string/action_news" />
        <item
            android:id="@+id/navr_finance"
            android:title="@string/action_finance" />
        <item
            android:id="@+id/navr_education"
            android:title="@string/action_education" />
        <item
            android:id="@+id/navr_culture"
            android:title="@string/action_culture" />
        <item
            android:id="@+id/navr_beauty"
            android:title="@string/action_beauty" />
    </group>

    <item android:title="@string/account">
        <menu>
            <item
                android:id="@+id/navr_log"
                android:title="@string/action_logout" />
        </menu>
    </item>

</menu>