<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navl_today"
            android:title="@string/action_today" />
        <item
            android:id="@+id/navl_readLater"
            android:title="@string/action_readLater" />
        <item
            android:id="@+id/navl_explore"
            android:title="@string/action_explore" />
    </group>

    <item android:title="My Menu"
        android:id="@+id/my_menu_item">
        <!-- A empty SubMenu -->
        <menu></menu>
    </item>

    <item android:title="@string/personalFeeds">
        <menu>
            <item
                android:id="@+id/navl_all"
                android:title="@string/action_all" />
        </menu>
    </item>

    <item
        android:id="@+id/navl_settings"
        android:title="@string/action_settings" />
    <item
        android:id="@+id/navl_log"
        android:title="@string/action_login" />

</menu>
